<resources>
    <string name="app_name">ANUChat</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="uid_email">Your ANU uid</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="uid_and_password_not_set">uid and password not set</string>
    <string name="uid_not_set">uid not set</string>
    <string name="password_not_set">password not set</string>
    <string name="password_not_confirmed">password not confirmed</string>
    <string name="uid_not_valid">uid not valid</string>
    <string name="password_not_valid">Password not valid</string>
    <string name="join_anu_chat">Join ANU Chat!</string>
    <string name="continue_to_verify">Lead me to verify!</string>
    <string name="sending_email">Sending email ...</string>
    <string name="click_button_to_check_if_you_are_verified">Click button to check if you are verified</string>
    <string name="i_ve_verified">I\'ve Verified!</string>
    <string name="click_button_to_send_verification_email">Click button to send verification email</string>
    <string name="checking">Checking ...</string>
    <string name="registered_hint">✓ Registered</string>
    <string name="email_me_now">Email me now!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moments">Moments</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="me">Me</string>
    <string name="write_moment">Write moment</string>
    <string name="at_user">at user</string>
    <string name="current_location">Current location</string>
    <string name="hash_tag">Hash tag</string>
    <string name="select_images">Select Images</string>
    <string name="enrolment_year_college">Enrolment year, College</string>
    <string name="username">Username</string>
    <string name="unselect_image">Unselected image</string>
    <string name="title_activity_test_bottom_navigation">TestBottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="set_schedule">Set schedule</string>
    <string name="set_visibility">Set visibility</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
</resources>