<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="moments_floating_action_button_transition"
    android:id="@+id/activity_write_moment_background"
    tools:context="wang.bogong.anuchat.MomentsActivities.WriteMomentActivity"
>

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentInsetStart="0dp"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_write_moment_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:layout_gravity="left"
            app:cornerRadius="30dp"
            android:textColor="@color/black"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginLeft="14dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_write_moment_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Post"
            app:cornerRadius="30dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_gravity="right"
            android:backgroundTint="@color/sandstone_yellow"
            android:letterSpacing="0.0"
            android:layout_marginRight="14dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toTopOf="@+id/materialToolbar"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/test_image_landscape"
            android:id="@+id/activity_write_moment_selectedImageImageView"
            android:scaleType="centerCrop"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

        <com.hendraanggrian.appcompat.widget.SocialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:hint="Share here..."
            android:id="@+id/activity_write_moment_socialTextView"
            android:background="@null"
            android:layout_weight="0.5"
            android:gravity="start"
            app:socialFlags="hashtag|hyperlink"
            app:hashtagColor="@color/anu_logo_yellow"
            app:hyperlinkColor="@color/mist_blue_dark"
            />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_write_moment_removeImageButton"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        android:src="@drawable/ic_cancel"
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="16dp"
        app:tint="@color/black"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:contentDescription="@string/unselect_image"
        android:visibility="gone"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:layout_marginStart="16dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:contentInsetStart="0dp"
        android:id="@+id/materialToolbar"
        android:background="@color/shallow_grey"
        >

        <ImageButton
            android:id="@+id/activity_write_moment_setLocationImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/current_location"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:tooltipText="Set location"
            android:layout_marginLeft="8dp"
            />

        <TextView
            android:id="@+id/activity_write_moment_locationDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/activity_write_moment_addHashTagImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hash"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/hash_tag"
            android:minHeight="48dp"
            android:minWidth="48dp" />

        <ImageButton
            android:visibility="gone"
            android:id="@+id/activity_write_moment_addAtImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_at"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/at_user"
            android:minHeight="48dp"
            android:minWidth="48dp" />

        <ImageButton
            android:id="@+id/activity_write_moment_addImageImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image"
            android:background="?android:selectableItemBackground"
            android:layout_gravity="right"
            android:contentDescription="@string/select_images"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:layout_marginRight="8dp"
            android:tooltipText="Add image"
            />

        <ImageButton
            android:id="@+id/activity_write_moment_setScheduleImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_schedule"
            android:background="?android:selectableItemBackground"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:tooltipText="Set schedule"
            android:contentDescription="@string/set_schedule" />

        <TextView
            android:id="@+id/activity_write_moment_scheduledDisplayTextView"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_public"
            android:tooltipText="Moment visibility: public"
            android:id="@+id/activity_write_moment_setVisibilityImageButton"
            android:layout_gravity="right"
            android:contentDescription="@string/set_visibility" />

        <ImageButton
            android:id="@+id/activity_write_moment_takePhotoImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            android:layout_gravity="right"
            android:background="?android:selectableItemBackground"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:visibility="gone"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/activity_write_moment_loadingLocationProgressBar"
        app:layout_constraintStart_toStartOf="@+id/materialToolbar"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="18dp"
        android:indeterminateTint="@color/anu_logo_yellow"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>